// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmResetPassword renders an error message 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Reset Password
  </Text>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f5bcbc",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      Test error message
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Submit
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "teal",
          },
        ]
      }
    >
      Resend Code
    </Text>
  </View>
</View>
`;

exports[`ConfirmResetPassword renders as expected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "black",
        },
        Object {
          "fontSize": 34,
          "fontWeight": "300",
          "lineHeight": 51,
        },
        undefined,
      ]
    }
  >
    Reset Password
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Submit
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "teal",
          },
        ]
      }
    >
      Resend Code
    </Text>
  </View>
</View>
`;
